@@ -2,6 +2,8 @@ pybal (1.13.4) UNRELEASED; urgency=medium
 
   * Allow to specify configuration file name on the CLI (-c)
   * Log a warning on empty responses from etcd
+  * Use caller function module name as log prefix (eg: pybal, etcd) for logs
+    with severity WARN or higher
 
  -- Emanuele Rocca <ema@wikimedia.org>  Thu, 26 Jan 2017 09:48:27 +0100
 
